--- a/packages/atlaspack/config-default.json
+++ b/packages/atlaspack/config-default.json
@@ -1,72 +1,74 @@
 {
-  "bundler": "./lib/bundler-default//bundler-default",
+  "bundler": "./lib/bundler-default/index.js",
   "transformers": {
-    "types:*.{ts,tsx}": ["@atlaspack/transformer-typescript-types"],
-    "bundle-text:*": ["...", "@atlaspack/transformer-inline-string"],
-    "data-url:*": ["...", "@atlaspack/transformer-inline-string"],
+    "types:*.{ts,tsx}": ["./lib/transformer-typescript-types/index.js"],
+    "bundle-text:*": ["...", "./lib/transformer-inline-string/index.js"],
+    "data-url:*": ["...", "./lib/transformer-inline-string/index.js"],
     "worklet:*.{js,mjs,jsm,jsx,es6,cjs,ts,tsx}": [
-      "@atlaspack/transformer-worklet",
+      "./lib/transformer-worklet/index.js",
       "..."
     ],
     "*.{js,mjs,jsm,jsx,es6,cjs,ts,tsx}": [
-      "@atlaspack/transformer-js",
-      "@atlaspack/transformer-react-refresh-wrap"
+      "./lib/transformer-js/index.js",
+      "./lib/transformer-react-refresh-wrap/index.js"
     ],
-    "*.{json,json5}": ["@atlaspack/transformer-json"],
-    "*.jsonld": ["@atlaspack/transformer-jsonld"],
-    "*.toml": ["@atlaspack/transformer-toml"],
-    "*.webmanifest": ["@atlaspack/transformer-webmanifest"],
-    "webmanifest:*.{json,webmanifest}": ["@atlaspack/transformer-webmanifest"],
-    "*.{yaml,yml}": ["@atlaspack/transformer-yaml"],
-    "*.{glsl,vert,frag}": ["@atlaspack/transformer-glsl"],
-    "*.{gql,graphql}": ["@atlaspack/transformer-graphql"],
-    "*.{sass,scss}": ["@atlaspack/transformer-sass"],
+    "*.{json,json5}": ["./lib/transformer-json/index.js"],
+    "*.jsonld": ["./lib/transformer-jsonld/index.js"],
+    "*.toml": ["./lib/transformer-toml/index.js"],
+    "*.webmanifest": ["./lib/transformer-webmanifest/index.js"],
+    "webmanifest:*.{json,webmanifest}": [
+      "./lib/transformer-webmanifest/index.js"
+    ],
+    "*.{yaml,yml}": ["./lib/transformer-yaml/index.js"],
+    "*.{glsl,vert,frag}": ["./lib/transformer-glsl/index.js"],
+    "*.{gql,graphql}": ["./lib/transformer-graphql/index.js"],
+    "*.{sass,scss}": ["./lib/transformer-sass/index.js"],
     "*.{css,pcss}": [
-      "@atlaspack/transformer-postcss",
-      "@atlaspack/transformer-css"
+      "./lib/transformer-postcss/index.js",
+      "./lib/transformer-css/index.js"
     ],
     "*.{htm,html,xhtml}": [
-      "@atlaspack/transformer-posthtml",
-      "@atlaspack/transformer-html"
+      "./lib/transformer-posthtml/index.js",
+      "./lib/transformer-html/index.js"
     ],
-    "*.pug": ["@atlaspack/transformer-pug"],
-    "*.mdx": ["@atlaspack/transformer-mdx"],
+    "*.pug": ["./lib/transformer-pug/index.js"],
+    "*.mdx": ["./lib/transformer-mdx/index.js"],
     "*.{png,jpg,jpeg,webp,gif,tiff,avif,heic,heif}": [
-      "@atlaspack/transformer-image"
+      "./lib/transformer-image/index.js"
     ],
-    "*.svg": ["@atlaspack/transformer-svg"],
-    "*.{xml,rss,atom}": ["@atlaspack/transformer-xml"],
-    "url:*": ["...", "@atlaspack/transformer-raw"]
+    "*.svg": ["./lib/transformer-svg/index.js"],
+    "*.{xml,rss,atom}": ["./lib/transformer-xml/index.js"],
+    "url:*": ["...", "./lib/transformer-raw/index.js"]
   },
-  "namers": ["@atlaspack/namer-default"],
+  "namers": ["./lib/namer-default/index.js"],
   "runtimes": [
-    "@atlaspack/runtime-js",
-    "@atlaspack/runtime-browser-hmr",
-    "@atlaspack/runtime-react-refresh",
-    "@atlaspack/runtime-service-worker"
+    "./lib/runtime-js/index.js",
+    "./lib/runtime-browser-hmr/index.js",
+    "./lib/runtime-react-refresh/index.js",
+    "./lib/runtime-service-worker/index.js"
   ],
   "optimizers": {
-    "data-url:*": ["...", "@atlaspack/optimizer-data-url"],
-    "*.css": ["@atlaspack/optimizer-css"],
-    "*.{html,xhtml}": ["@atlaspack/optimizer-htmlnano"],
-    "*.{js,mjs,cjs}": ["@atlaspack/optimizer-swc"],
-    "*.svg": ["@atlaspack/optimizer-svgo"],
-    "*.{jpg,jpeg,png}": ["@atlaspack/optimizer-image"]
+    "data-url:*": ["...", "./lib/optimizer-data-url/index.js"],
+    "*.css": ["./lib/optimizer-css/index.js"],
+    "*.{html,xhtml}": ["./lib/optimizer-htmlnano/index.js"],
+    "*.{js,mjs,cjs}": ["./lib/optimizer-swc/index.js"],
+    "*.svg": ["./lib/optimizer-svgo/index.js"],
+    "*.{jpg,jpeg,png}": ["./lib/optimizer-image/index.js"]
   },
   "packagers": {
-    "*.{html,xhtml}": "@atlaspack/packager-html",
-    "*.css": "@atlaspack/packager-css",
-    "*.{js,mjs,cjs}": "@atlaspack/packager-js",
-    "*.svg": "@atlaspack/packager-svg",
-    "*.{xml,rss,atom}": "@atlaspack/packager-xml",
-    "*.ts": "@atlaspack/packager-ts",
-    "*.wasm": "@atlaspack/packager-wasm",
-    "*.{jsonld,svg,webmanifest}": "@atlaspack/packager-raw-url",
-    "*": "@atlaspack/packager-raw"
+    "*.{html,xhtml}": "./lib/packager-html/index.js",
+    "*.css": "./lib/packager-css/index.js",
+    "*.{js,mjs,cjs}": "./lib/packager-js/index.js",
+    "*.svg": "./lib/packager-svg/index.js",
+    "*.{xml,rss,atom}": "./lib/packager-xml/index.js",
+    "*.ts": "./lib/packager-ts/index.js",
+    "*.wasm": "./lib/packager-wasm/index.js",
+    "*.{jsonld,svg,webmanifest}": "./lib/packager-raw-url/index.js",
+    "*": "./lib/packager-raw/index.js"
   },
   "compressors": {
-    "*": ["@atlaspack/compressor-raw"]
+    "*": ["./lib/compressor-raw/index.js"]
   },
-  "resolvers": ["@atlaspack/resolver-default"],
-  "reporters": ["@atlaspack/reporter-dev-server"]
+  "resolvers": ["./lib/resolver-default/index.js"],
+  "reporters": ["./lib/reporter-dev-server/index.js"]
 }
