--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,17 @@ members = [
   "packages/utils/dev-dep-resolver",
 ]
 
+[profile.smol]
+inherits = "release"
+opt-level = 3
+debug = false
+lto = true
+strip = true
+panic = 'unwind'
+incremental = false
+codegen-units = 1
+rpath = false
+
 [profile.canary]
 inherits = "release"
 debug = true
@@ -18,7 +29,7 @@ async-trait = "0.1.85"
 bitflags = "2.6.0"
 browserslist-rs = "0.17.0"
 cfg-if = "1.0.0"
-clap = "4.5.23"
+clap = "4.5.36"
 clippy = "0.0.302"
 crash-handler = "0.6.2"
 criterion = "0.5.1"
@@ -34,6 +45,7 @@ glob = "0.3.2"
 glob-match = "0.2.1"
 heed = "0.21.0"
 hex = "0.4.3"
+homedir = "0.3.4"
 html5ever = { git = "https://github.com/servo/html5ever", rev = "a831e82fcee980d80f53699dc14bdfc39a17dc5f" }
 image = "0.25.5"
 indexmap = "2.7.0"
@@ -70,6 +82,7 @@ petgraph = "0.7.1"
 pretty_assertions = "1.4.1"
 rand = "0.8.5"
 rayon = "1.10.0"
+reqwest = "0.12.15"
 regex = "1.11.1"
 sentry = { version = "0.35.0", default-features = false }
 serde = "1.0.217"
@@ -85,6 +98,7 @@ sourcemap = "9.1.2"
 swc_core = "10.0.0"
 swc_ecma_parser = "6.0.1"
 swc_ecma_transforms_testing = "7.0.0"
+tar = "0.4.44"
 tempfile = "3.17"
 thiserror = "2.0.9"
 thread_local = "1.1.8"
@@ -99,7 +113,9 @@ tracing-test = "0.2.5"
 url = "2.5.4"
 url-search-params = "12.0.0"
 whoami = "1.5.2"
+which = "7.0.3"
 xxhash-rust = "0.8.15"
+xz = "0.1.0"
 
 # DEPRECATED
 serde_yaml = "0.9.34+deprecated"
